--- a/EVA apps/EdurellVideoAnnotation/templates/burst.html
+++ b/EVA apps/EdurellVideoAnnotation/templates/burst.html
@@ -1,10 +1,12 @@
 {% extends "layout.html" %}
-{% set active_page = "video_annotation" %}
+{% set active_page = "burst" %}
   <head>
 
       {% block head %}
           {{ super() }}
           <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/form_video.css') }}"/>
+          <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/radio_choices.css') }}"/>
+
 
 
       {% endblock %}
@@ -30,18 +32,31 @@
 
     <div class="container" id="mainContainer" style="margin-top: 10px">
 
-      <div class="row">
-        <div class="col">
-            <p class="title"> Video Annotation Selection  </p>
-        </div>
-        <div class="col">
-          <button type="button" class="btn btn-lg btn-dodgerblue btn-primary float-right" data-toggle="modal" data-target="#addVideoModal">
-            + Add Video
-          </button>
-        </div>
-      </div>
+      <p class="title"> Burst </p>
 
-      <div class="row" style="">
+
+    <div id="tab_analysis_type">
+
+      <p class="titleLower"> Select modality of extraction</p>
+
+        <div class="wrapperRadio">
+         <input type="radio" class="analysis_type" name="analysis_type" id="semi" value="Semi automatic extraction">
+         <input type="radio" class="analysis_type" name="analysis_type" id="auto" value="automatic extraction">
+
+           <label for="semi" class="option option-1">
+             <div class="dot"></div>
+              <span>Semi automatic extraction</span>
+              </label>
+           <label for="auto" class="option option-2">
+             <div class="dot"></div>
+              <span>Automatic extraction</span>
+           </label>
+
+        </div>
+    </div>
+
+    <div id="videos" style="display: none">
+    <div class="row" style="">
         <div class="col">
             <p class="titleLower"> Select a video</p>
         </div>
@@ -55,7 +70,7 @@
         </div>
       </div>
 
-    <div id="videos" class="center_selection" style="margin-top: 2%;">
+    <div class="center_selection" style="margin-top: 2%;" >
 
         {% for vid in videos%}
             <label class="video_radio" video="{{ vid.video_id }}"  >
@@ -66,10 +81,13 @@
         {% endfor %}
 
     </div>
+    </div>
+
+
 
     <div class="container" id="loading" style="display: none; margin-top: 2%">
         <div class="text-center" style="margin-top: 4%">
-            <p class="titleLower"> The video is being downloaded.. </p>
+           <p class="titleLower"> Extracting keywords.. </p>
           <div class="spinner-border text-primary" role="status">
             <span class="sr-only">Loading...</span>
           </div>
@@ -78,53 +96,20 @@
 
     </div>
 
-
-
-<!-- Modal add video -->
-<div class="modal fade" id="addVideoModal" tabindex="-1" role="dialog"
-     aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-    <div class="modal-content" style="background-color: #f8f9fa;">
-      <div class="modal-header">
-
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+    <form method="POST" id="urlForm" style="display: none">
+      {{ form.csrf_token }}
+       <div class="form-group">
+         {{ form.url(class_='form-control', autocomplete="off", id="youtube_url")}}
+         {{ form.type(class_='form-control')}}
+       </div>
+        <button type="submit" class="btn btn-dodgerblue float-right">
+            Launch burst
         </button>
-      </div>
-
-
-      <div class="modal-body" style="height:300px;">
-        <h5 class="title" id="conceptsModalLabel" style="margin-top: 2%">Add Youtube Url</h5>
-            <br>
-            <form method="POST" id="urlForm">
-              {{ form.csrf_token }}
-               <div class="form-group">
-                 {{ form.url(class_='form-control', autocomplete="off", id="youtube_url")}}
-               </div>
-            <button type="submit" class="btn btn-dodgerblue float-right">
-                Add Video & Start Annotate
-            </button>
-            </form>
-
-            <div class="container" id="loading2" style="display: none; margin-top: 2%">
-                <div class="text-center" style="margin-top: 4%">
-                   <p class="titleLower"> The video is being downloaded.. </p>
-                  <div class="spinner-border text-primary" role="status">
-                    <span class="sr-only">Loading...</span>
-                  </div>
-                </div>
-            </div>
+    </form>
 
 
 
-      </div>
 
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
   {% endblock %}
   </body>
 
@@ -134,23 +119,37 @@
 
 <script>
 
+
+
     function loading(){
         document.getElementById("videos").style.display = "none"
         document.getElementById("loading").style.display = "block"
         document.getElementById("urlForm").style.display = "none"
-        document.getElementById("loading2").style.display = "block"
+
     }
 
-    $("#urlForm").submit(function() {
-      loading()
-    });
 
     $(".video_radio").click(function(e) {
         e.preventDefault();
+
         loading()
-        document.getElementById("youtube_url").value = "https://www.youtube.com/watch?v=" + this.getAttribute("video")
+        document.getElementById("youtube_url").value = this.getAttribute("video")
         document.getElementById("urlForm").submit();
     });
+
+    $('.analysis_type').click(function(e) {
+      console.log("ciao")
+
+      document.getElementById("tab_analysis_type").style.display = "none"
+      document.getElementById("videos").style.display = "block"
+
+      if($(this).attr('id') == "auto")
+        document.getElementById("type-1").checked = true;
+      else
+        document.getElementById("type-0").checked = true;
+
+
+    })
 
 
 </script>
