--- a/EVA apps/EdurellVideoAnnotation/templates/layout.html
+++ b/EVA apps/EdurellVideoAnnotation/templates/layout.html
@@ -39,6 +39,9 @@
           <li class="nav-item {{ 'active' if active_page == 'analysis' }}">
             <a class="nav-link" href="{{ url_for('analysis') }}">Analysis</a>
           </li>
+          <li class="nav-item {{ 'active' if active_page == 'Burst' }}">
+            <a class="nav-link" href="{{ url_for('burst') }}">Burst</a>
+          </li>
 {#          <li class="nav-item {{ 'active' if active_page == 'gold_standard' }}">#}
 {#            <a class="nav-link" href="{{ url_for('gold_standard') }}">Gold Standard</a>#}
 {#          </li>#}
