--- a/EVA apps/EdurellVideoAnnotation/static/styles/style.css
+++ b/EVA apps/EdurellVideoAnnotation/static/styles/style.css
@@ -183,3 +183,23 @@ tr {
 .result_text{
     float: right;
 }
+
+/*
+-------------------------
+*/
+
+.m-concept-text {
+  color: blue;
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  margin-bottom: 0px;
+}
+
+.m-synonym-text {
+  color: yellowgreen;
+  font-size: 12px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: normal;
+  margin-bottom: 10px;
+}
