--- a/EVA apps/EdurellVideoAnnotation/static/styles/style.css
+++ b/EVA apps/EdurellVideoAnnotation/static/styles/style.css
@@ -189,7 +189,7 @@ tr {
 */
 
 .m-concept-text {
-  color: blue;
+  color: #007bff;
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
@@ -202,4 +202,18 @@ tr {
   font-family: 'Times New Roman', Times, serif;
   font-weight: normal;
   margin-bottom: 10px;
+}
+
+.spaced-text{
+  padding-right: 8px;
+}
+
+.synonym-set-class{
+  color: yellowgreen;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
+.spaced-text{
+  margin-bottom: 3px;
 }
