--- a/EVA apps/EdurellVideoAnnotation/templates/burst_results.html
+++ b/EVA apps/EdurellVideoAnnotation/templates/burst_results.html
@@ -46,51 +46,103 @@
 
             <div class="row" id="checkConcepts">
 
-             <div  class="col-7">
+              <div  class="col-7">
 
-                 <ul class="nav nav-tabs" id="myTab" role="tablist">
-                      <li class="nav-item">
-                        <a class="nav-link active" id="concepts-tab" data-toggle="tab" href="#concepts" role="tab" aria-controls="home" aria-selected="true">Concepts</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" id="add-tab" data-toggle="tab" href="#add" role="tab" aria-controls="profile" aria-selected="false">Add new concept</a>
-                      </li>
-                  </ul>
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                  <li class="nav-item">
+                    <a class="nav-link active" id="concepts-tab" data-toggle="tab" href="#concepts" role="tab" aria-controls="home" aria-selected="true">Vocabulary</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" id="add-tab" data-toggle="tab" href="#add-concept" role="tab" aria-controls="profile" aria-selected="false">Add new concept</a>
+                  <li class="nav-item">
+                    <a class="nav-link" id="add-tab" data-toggle="tab" href="#add-synonyms" role="tab" aria-controls="profile" aria-selected="false">Manage synonyms</a>
+                  </li>
+                </ul>
 
-                  <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active" id="concepts" role="tabpanel" aria-labelledby="concepts-tab" style="max-height:400px;overflow:auto;">
+                <!-- Body of the modal Concepts & Synonyms -->
+                <div class="tab-content" id="myTabContent">
 
-                        <div class="list-group list-group-flush" id="conceptsTable">
+                  <!-- TAB 1 - Concepts Vocabulary -->
+                  <div class="tab-pane fade show active" id="concepts" role="tabpanel" aria-labelledby="concepts-tab" style="max-height:400px;overflow:auto;">
+                      <!--<table class="table">
+                        <tbody id="conceptsTable"></tbody>
+                      </table>-->
+                      <div class="list-group list-group-flush" id="conceptsTable">
 
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="add" role="tabpanel" aria-labelledby="add-tab">
-                      <div style="padding:7%;">
+                      </div>
+                  </div>
 
-                        <div class="row">
-                            <label for="newConcept">Concept:</label>
-                            <input type="text" class="form-control" autocomplete="off" id="newConcept"  placeholder="Enter new concept">
-                        </div>
-                          <br>
-                        <div class="row">
-                            <button  onclick="addConcept()" class="btn btn-primary">Add concept</button>
-                        </div>
-                          <br>
-                        <div class="row" id="errorConcept" style="display:none">
-                        </div>
+                  <!-- TAB 2 - Add Concepts -->
+                  <div class="tab-pane fade" id="add-concept" role="tabpanel" aria-labelledby="add-tab">
+                    <div style="padding:7%;">
+
+                      <div class="row">
+                          <label for="newConcept">Concept:</label>
+                          <input type="text" class="form-control" autocomplete="off" id="newConcept"  placeholder="Enter new concept">
+                      </div>
+                        <br>
+                      <div class="row">
+                          <button  onclick="addConcept()" class="btn btn-primary">Add new concept</button>
+                      </div>
+                        <br>
+                      <div class="row" id="errorConcept" style="display:none">
                       </div>
                     </div>
                   </div>
 
+                  <!-- TAB 3 - Manage Synonyms -->
+                  <div class="tab-pane fade" id="add-synonyms" role="tabpanel" aria-labelledby="add-tab">
+                    <div style="padding:7%;">
 
+                      <!-- Synonym set selected -->
+                      <div class="row">
+                        <p class="spaced-text">Selected synonym set: </p><p class="synonym-set-class" id="synonymSet"></p>
+                      </div>
 
-             </div>
+                      <!-- Synonym set selection -->
+                      <div id="synset-selection" class="spaced-text">
+                        <div class="row">
+                          <label for="selectSynonymSet">Synonym Set:</label>
+                          <input type="text" class="form-control" autocomplete="off" id="selectSynonymSet"  placeholder="Select one of the synonym list word">
+                        </div>
+                          <br>
+                        <div class="row">
+                            <button onclick="selectSynonymSet()" class="btn btn-primary">Select Synonym Set</button>
+                        </div>
+                        <div class="row" id="errorSynonymSet" style="display:none">
+                        </div>
+                      </div>
+
+                      <!-- Add new synonym -->
+                      <div id="add-syn-selection" class="spaced-text">
+                        <div class="row">
+                            <label for="newSynonym">New Synonym:</label>
+                            <input type="text" class="form-control" autocomplete="off" id="synonymWord"  placeholder="Enter synonym to add/remove">
+                        </div>
+                          <br>
+                        <div class="row">
+                            <button  onclick="addSynonym()" class="btn btn-primary">Add Synonym Relation</button>
+                        </div>
+                        <div class="row">
+                          <button  onclick="removeSynonym()" class="btn btn-primary">Remove Synonym Relation</button>
+                        </div>
+                          <br>
+                        <div class="row" id="errorNewSynonym" style="display:none">
+                        </div>
+                          <br>
+                        <div class="row" id="errorRemoveSynonym" style="display:none">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
 
               <div class="col">
                 <p class="titleLower"> Transcript </p>
                 <div id="transcript" style="overflow-y: scroll;max-height:400px"></div>
               </div>
-
 
             </div>
             <button  onclick="launchBurstAnalysis()" class="btn btn-primary" style="float: right;margin-top: 1%">Launch burst Analysis</button>
@@ -188,7 +240,7 @@
 
 {% block scripts %}
 
-<script src="{{ url_for('static', filename='burst.js') }}"></script>
+<script src="{{ url_for('static', filename='burstVocabulary.js') }}"></script>
 
 <script src="{{ url_for('static', filename='graph_visualization.js') }}"></script>
 <script>
@@ -205,7 +257,8 @@
     let $captions = {{ result|tojson }};
     let $concepts = {{ concepts|tojson }};
     $concepts.sort()
-
+    let $conceptVocabulary = {};
+    let $synonymList = [];
     let $lemmatizedSubs = {{ lemmatized_subtitles|tojson }};
     let $video_id = {{ video_id|tojson }};
     let $allLemmas = {{ all_lemmas|tojson }};
@@ -213,25 +266,31 @@
     let $typeAnalysis = {{ type|tojson }};
     let $title = {{ title|tojson }};
 
-    if($typeAnalysis == "semi"){
+    async function getVocabulary() {
+      $conceptVocabulary = await getConceptVocabulary();
+      if($typeAnalysis == "semi"){
         addSubtitles();
-        printConcepts();
-    }else{
+        //printConcepts();
+        showVocabularyBurst();
+      }
+      else{
         console.log($typeAnalysis)
         launchBurstAnalysis();
+      }
+
+      
     }
 
     let video = document.getElementById("video-active");
+    getVocabulary();
+    console.log("dopo");
+
 
 
     function loading(){
         document.getElementById("checkConcepts").style.display = "none"
         document.getElementById("loading").style.display = "block"
     }
-
-
-
-
 
 
 
