--- a/EVA apps/EdurellVideoAnnotation/templates/mooc_annotator.html
+++ b/EVA apps/EdurellVideoAnnotation/templates/mooc_annotator.html
@@ -78,6 +78,14 @@
      </div>
 
       <div id="transcript" class="transcript"></div>
+      <br>
+      <div id="selectedConceptBox" class="selected-concept-box">
+        <p class="padding-left">Selected Concept:<span id="transcript-selected-concept" class="selected-concept">--</span></p>
+        <div class="padding-left">
+            <p class="description-selected-concept same-line">Synonyms: </p>
+            <p id="transcript-selected-concept-synonym" class="m-synonym-text2 margin-left same-line">--</p>
+        </div>
+        </div>
 
       <div id="relation" class="add-relation-box" style="display:none">
 
