--- a/EVA apps/EdurellVideoAnnotation/static/styles/style.css
+++ b/EVA apps/EdurellVideoAnnotation/static/styles/style.css
@@ -27,7 +27,8 @@ h1 {
     box-sizing: border-box;
     grid-template-columns: minmax(auto, 60%) auto;
     justify-content: center;
-    gap: 3em;
+    column-gap: 3em;
+    row-gap: 1em;
     margin-left: 10%;
     margin-right: 10%;
 }
@@ -203,17 +204,54 @@ tr {
   font-weight: normal;
   margin-bottom: 10px;
 }
+.m-synonym-text2 {
+  color: yellowgreen;
+  font-size: 16px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: normal;
+  margin-top:2px ;
+}
 
 .spaced-text{
   padding-right: 8px;
+  margin-bottom: 3px;
 }
 
 .synonym-set-class{
   color: yellowgreen;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+  margin-top: 6px;
 }
 
-.spaced-text{
-  margin-bottom: 3px;
+
+.selected-concept {
+margin-left: 6px;
+font-weight: 600;
+font-size: 16 px;
+font-family: Arial, Helvetica, sans-serif;
+font-weight: bold;
+color: #007bff;
+}
+
+.selected-concept-box {
+  border: 1px solid #c8c8c8;
+  padding: 10px;
+}
+
+.description-selected-concept {
+  margin-right: 5px;
+}
+
+.margin-left {
+  margin-left: 5px;
+}
+
+.padding-left {
+  padding-left: 14px;
+}
+
+.same-line{
+display: inline-block;
+vertical-align: top;
 }
