mongo db update

--- a/EVA apps/EdurellVideoAnnotation/templates/mooc_annotator.html
+++ b/EVA apps/EdurellVideoAnnotation/templates/mooc_annotator.html
@@ -367,10 +367,7 @@
       let $imagesPath = {{ images_path|tojson }};
       let $concepts = {{ concepts|tojson }};
       $concepts.sort()
-      let $conceptVocabulary = {};
-      for(let i in $concepts) {
-        $conceptVocabulary[$concepts[i]] = [];
-      }
+      let $conceptVocabulary = {{ conceptVocabulary|tojson }};
       let $synonymList = [];
       let $lemmatizedSubs = {{ lemmatized_subtitles|tojson }};
       let $video_id = {{ vid_id|tojson }};
