Added styles to semi-auto

--- a/EVA apps/EdurellVideoAnnotation/templates/burst_results.html
+++ b/EVA apps/EdurellVideoAnnotation/templates/burst_results.html
@@ -135,10 +135,20 @@
 
 
               </div>
-
-              <div class="col">
-                <p class="titleLower"> Transcript </p>
-                <div id="transcript" style="overflow-y: scroll;max-height:400px"></div>
+              
+              <div id="right-body" class="right-body-class">
+                <div class="col">
+                  <p class="titleLower"> Transcript </p>
+                  <div id="transcript" style="overflow-y: scroll;max-height:400px"></div>
+                </div>
+                <br>
+                <div id="selectedConceptBox" class="selected-concept-box">
+                  <p class="padding-left">Selected Concept:<span id="transcript-selected-concept" class="selected-concept">--</span></p>
+                  <div class="padding-left">
+                      <p class="description-selected-concept same-line">Synonyms: </p>
+                      <p id="transcript-selected-concept-synonym" class="m-synonym-text2 margin-left same-line">--</p>
+                  </div>
+                </div>
               </div>
 
             </div>
@@ -279,7 +289,6 @@
 
     let video = document.getElementById("video-active");
     getVocabulary();
-    console.log("dopo");
 
 
 
